2005-07-17
	* Fixed a pile of bugs in configure script
	* Added proper checking for headers in configure script
	* Made METAR shit threaded so it would stop being retarded, also made
	it try more then once to update
	* Added $metar_tempf and ${i2c tempf} for americans

2005-07-16
	* Added option for Conky to update N times and quit, see
	total_run_times in conkyrc.sample
	* Added metar code for weather info, thanks to somebody on sf.net
	* Added $alignr and $alignc for right and centre alignment
	* Added wireless info and IP addr patch, thanks Bobby Beckmann,
	options $addr and $linkstatus (please test!), as well as fixed a mem
	leak in this patch
	* adt746x fix, thanks to dan-h on sf.net
	* Added mldonkey support patch, thanks Lucas Brutschy on sf.net 
	* Added patch to allow hex colour values, thanks roiban adi on sf.net
	* Added if constructs patch, thanks Lucas Brutschy on sf.net
	* Fixed bug in tab code (hopefully for the last time)
	* Added option to sort by cpu or memory for top, see top_sort_cpu

2005-07-12
	* Added fix for battery charged state (thanks to Lukas Zapletal
	<lzap@seznam.cz>)

2005-07-05
	* Conky 1.1 released

2005-07-03
	* Added $mpd_bar and $mpd_bitrate
	* Some minor code cleanups prior to release
	* Fixed problem with Conky not compiling when XFT disabled
	* Fixed configure.in problems with Xdbe

2005-07-01
	* Fixed memory leak in MPD code
	* Added new $tail object (see conkyrc.sample) which loves to suck CPU
	and memory
	* Fixed more mem leaks

2005-06-30
	* Added use_spacer to config
	* Added $mpd_status
	* Added small fix for i2c from Filedil on forums.gentoo.org

2005-06-28
	* Made it possible to use tabs to right-justify (just add a bunch)
	* Added ${execbar} (see conkyrc.sample)

2005-06-26
	* Added memory % to top output
	* Added initial cairo backend (it's really quite useless at this stage actually, and I'm not sure if there is even any point to it)

2005-06-25
	* Conky now recognizes the tab character correctly