@@ -1,7 +1,0 @@
-	* look into utf8 support
-	* fix conky -i N stuff
-	* fix bars not being centred
-	* fix lines not being centred
-	* fix bug where memory stuff gets messed when mpd_host is defined
-	* fix bug with $freq
-	
