@@ -1,0 +1,6 @@
+#!/bin/sh
+
+aclocal-1.9
+autoheader-2.59
+automake-1.9 -a
+autoconf-2.59
